Fix header spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -373,6 +373,7 @@ button:hover {
 
 .show-page-container {
   width: 100%;
+  min-width: 1050px;
 }
 
 .show-page-top-header {
@@ -382,6 +383,7 @@ button:hover {
   width: 100%;
   height:130px;
   border-bottom: 1px solid lightgray;
+  top: 0px;
 }
 
 .show-page-top-header div {
@@ -1097,7 +1099,7 @@ button:hover {
 
 
 .splash-container .logout-bar {
-  top: 7px;
+  top: 0px;
 }
 
 .review-item-photo {
